--- a/testLogico.html
+++ b/testLogico.html
@@ -24,6 +24,7 @@
     <style>
         .error {
             color: red;
+            color: #8220d837;
             font-weight: 700;
             font-size: 20px;
         }
